@@ -6,7 +6,6 @@ import org.bukkit.Bukkit;
 import org.bukkit.entity.Player;
 import org.jetbrains.annotations.NotNull;
 
-import java.util.Collections;
 import java.util.HashSet;
 import java.util.Set;
 
@@ -18,14 +17,19 @@ public class GroupSelector implements Selector {
     }
 
     @Override
-    public @NotNull Set<Player> getPlayers(String param) {
-        if (!RaVault.isPermissionConnected()) return Collections.emptySet();
-        if (param.isEmpty()) return Collections.emptySet();
+    public @NotNull Set<Player> getPlayers(@NotNull String param) {
+        if (!RaVault.isPermissionConnected()) return Set.of();
+        if (param.isEmpty()) return Set.of();
         Set<Player> players = new HashSet<>();
-        String[] group = param.split(",\\s*");
-        for (Player player : Bukkit.getOnlinePlayers())
-            for (String g : group)
-                if (RaVault.playerInGroup(player, g)) players.add(player);
+        String[] group = param.split(",");
+        for (Player player : Bukkit.getOnlinePlayers()) {
+            for (String g : group) {
+                if (RaVault.playerInGroup(player, g.trim())) {
+                    players.add(player);
+                    break;
+                }
+            }
+        }
         return players;
     }
 }
