@@ -7,7 +7,6 @@ import org.bukkit.Location;
 import org.bukkit.entity.Player;
 import org.jetbrains.annotations.NotNull;
 
-import java.util.Collections;
 import java.util.HashSet;
 import java.util.Set;
 
@@ -18,21 +17,24 @@ public class LocSelector implements Selector {
     }
 
     @Override
-    public @NotNull Set<Player> getPlayers(String param) {
-        if (param.isEmpty()) return Collections.emptySet();
+    public @NotNull Set<Player> getPlayers(@NotNull String param) {
+        if (param.isEmpty()) return Set.of();
         Parameters params = Parameters.fromString(param, "loc");
         String locStr = params.getString("loc");
-        if (locStr.isEmpty()) return Collections.emptySet();
+        if (locStr.isEmpty()) return Set.of();
         Location loc = LocationUtils.parseLocation(locStr, null);
-        if (loc == null) return Collections.emptySet();
+        if (loc == null) return Set.of();
         loc.setX(loc.getBlockX() + 0.5);
         loc.setY(loc.getBlockY() + 0.5);
         loc.setZ(loc.getBlockZ() + 0.5);
         double radius = params.getDouble("radius", 1.0);
         radius *= radius;
         Set<Player> players = new HashSet<>();
-        for (Player player : loc.getWorld().getPlayers())
-            if (player.getLocation().distanceSquared(loc) <= radius) players.add(player);
+        for (Player player : loc.getWorld().getPlayers()) {
+            if (player.getLocation().distanceSquared(loc) <= radius) {
+                players.add(player);
+            }
+        }
         return players;
     }
 
