@@ -5,7 +5,6 @@ import me.fromgate.reactions.selectors.Selector;
 import org.bukkit.entity.Player;
 import org.jetbrains.annotations.NotNull;
 
-import java.util.Collections;
 import java.util.HashSet;
 import java.util.Set;
 
@@ -17,13 +16,14 @@ public class RegionSelector implements Selector {
     }
 
     @Override
-    public @NotNull Set<Player> getPlayers(String regionStr) {
-        if (!RaWorldGuard.isConnected()) return Collections.emptySet();
-        if (regionStr.isEmpty()) return Collections.emptySet();
-        String[] arrRegion = regionStr.split(",\\s*");
+    public @NotNull Set<Player> getPlayers(@NotNull String regionStr) {
+        if (!RaWorldGuard.isConnected()) return Set.of();
+        if (regionStr.isEmpty()) return Set.of();
+        String[] arrRegion = regionStr.split(",");
         Set<Player> players = new HashSet<>();
-        for (String regionName : arrRegion)
-            players.addAll(RaWorldGuard.playersInRegion(regionName));
+        for (String regionName : arrRegion) {
+            players.addAll(RaWorldGuard.playersInRegion(regionName.trim()));
+        }
         return players;
     }
 
